Removed unnecessary icons

--- a/Resources/Icons/icon.rc
+++ b/Resources/Icons/icon.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON    DISCARDABLE     "MicSwitcher.ico"
+IDI_ICON1               ICON    DISCARDABLE     "MicSwitcherDark.ico"
